2014-01-16  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* Loader.cpp:
	* Color.h:
	* Normal.h:
	* ColorRGBA.h:
	* Coordinate.h:
	* X3DColorNode.h:
	* CoordinateDouble.h:
	* X3DNormalNode.h:
	* GeoCoordinate.h:
	* ConeEmitter.vs:
	* TextureCoordinate.h:
	* X3DCoordinateNode.h:
	* ConeEmitter.h:
	* PointEmitter.h:
	* PointEmitter.vs:
	* ConeEmitter.cpp:
	* PointEmitter.cpp:
	* TextureCoordinate3D.h:
	* TextureCoordinate4D.h:
	* MultiTextureCoordinate.h:
	* ParticleSystem.cpp:
	* X3DTextureCoordinateNode.h:
	* TextureCoordinateGenerator.h:
	* X3DParticleEmitterNode.h:
	* X3DParticleEmitterNode.cpp:
	* X3DParticleEmitterNode.h: 

2014-01-15  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* PointEmitter.vs:
	* ParticleSystem.cpp:
	* OddEvenMergeSort.h:
	* OddEvenMergeSort.vs: 

2014-01-14  Holger Seelig  <holger.seelig@yahoo.de>

	* WindPhysicsModel.cpp: 

2014-01-14  Holger Seelig  <holger.seelig@yahoo.de>

	* Color.h:
	* Color.cpp:
	* ColorRGBA.h:
	* ColorRGBA.cpp:
	* X3DColorNode.h:
	* Math.h:
	* Primitive.vs:
	* Color.h:
	* Random.h:
	* TextureCoordinate.h:
	* PointEmitter.vs:
	* TextureCoordinate.cpp:
	* ParticleSystem.h:
	* Quaternion.h:
	* TextureCoordinate4D.h:
	* TextureCoordinate3D.h:
	* ParticleMap.h:
	* MultiTextureCoordinate.h:
	* ParticleSystem.cpp:
	* TextureCoordinate3D.cpp:
	* TextureCoordinate4D.cpp:
	* X3DTextureCoordinateNode.h:
	* TextureCoordinateGenerator.h:
	* OddEvenMergeSort.vs: 

2014-01-13  Holger Seelig  <holger.seelig@yahoo.de>

	* Shader.cpp:
	* PointEmitter.vs:
	* ParticleMap.h:
	* ParticleSystem.cpp: 

2014-01-13  Holger Seelig  <holger.seelig@yahoo.de>

	* Math.h:
	* PointEmitter.vs:
	* ParticleSystem.h:
	* ParticleSystem.cpp: 

2014-01-11  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* PointEmitter.vs:
	* ParticleSystem.h:
	* ParticleMap.h:
	* ParticleSystem.cpp:
	* OddEvenMergeSort.vs:
	* X3DProgrammableShaderObject.cpp: 
