@@ -1,3 +1,13 @@
+2014-01-17  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* libtitania-x3d.cproj:
+	* IndexedLineSet.cpp:
+	* PolylineEmitter.h:
+	* PolylineEmitter.vs:
+	* ParticleSystem.cpp:
+	* PolylineEmitter.cpp:
+	* X3DParticleEmitterNode.h: 
+
 2014-01-16  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* libtitania-x3d.cproj:
